# Pathtracer

./: CMakeLists.txt  README.md  bounds.cpp  bounds.h  bvh.cpp  bvh.h  constants.h  main.cpp  model.cpp  model.h  pathtracer.cpp  pathtracer.h  pixel.h  ray.cpp  ray.h  sampler.cpp  sampler.h  scene.cpp  scene.h  shape.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/: bounds.cpp  bounds.h  bvh.h  main.cpp  model.cpp  model.h  pathtracer.cpp  pathtracer.h  pixel.h  ray.h  sampler.cpp  scene.cpp  scene.h  sphere.h
